Tools-app/SonarQube/sonarQube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-service
  namespace: tools-app
  labels:
    name: sonarqube-server
spec:
  selector:
    app: sonarqube-server
  ports:
    - port: 9000
      targetPort: 9000
